2nd/e65b3883ac0c3fdfdb409d4c05c2ece119d58d58.txt
#2967
src/http/modules/ngx_http_scgi_module.c:944: error: Integer Overflow L5
  ([-oo, +oo] - 1):unsigned64 by call to `ngx_cpystrn`.

src/http/modules/ngx_http_scgi_module.c:904:1: Parameter `r->lowcase_index`
902. 
903. 
904. static ngx_int_t
     ^
905. ngx_http_scgi_process_header(ngx_http_request_t *r)
906. {

src/http/modules/ngx_http_scgi_module.c:944:13: Call
942.             h->lowcase_key = h->key.data + h->key.len + 1 + h->value.len + 1;
943. 
944.             ngx_cpystrn(h->key.data, r->header_name_start, h->key.len + 1);
                 ^
945.             ngx_cpystrn(h->value.data, r->header_start, h->value.len + 1);
946. 

src/core/ngx_string.c:30:1: <LHS trace>
28. 
29. 
30. u_char *
    ^
31. ngx_cpystrn(u_char *dst, u_char *src, size_t n)
32. {

src/core/ngx_string.c:30:1: Parameter `n`
  28. 
  29. 
  30. u_char *
      ^
  31. ngx_cpystrn(u_char *dst, u_char *src, size_t n)
  32. {

src/core/ngx_string.c:37:12: Binary operation: ([-oo, +oo] - 1):unsigned64 by call to `ngx_cpystrn` 
  35.     }
  36. 
  37.     while (--n) {
                 ^
  38.         *dst = *src;
  39. 
